remove redundant subject exam fields
